# sqlalchemy-python

./: .gitignore  pyproject.toml  readme.md
ref/SQLAlchemy_basic/: NOT_ORM.ipynb  ORM.ipynb  ORM_detail.ipynb  Readme.md  commit_test.ipynb
tutorial/: quick_start.ipynb  sqlalchemy_tutorial.ipynb
