[tool.poetry]
name = "sqlalchemy-tutorial"
version = "0.1.0"
description = ""
authors = ["박용규 <herzblue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
SQLAlchemy = "^2.0.31"
Flask = "^3.0.3"
pytest = "^8.2.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
